<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >

    <ImageView
        android:contentDescription="@string/ibox_logo"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="72dp"
        app:srcCompat="@drawable/ic_teamwork" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textColor="@color/colorGray" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="@color/colorGray"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/colorGray" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:inputType="textPassword"
        android:textColor="@color/colorGray"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/colorGray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:text=""
        android:inputType="textEmailAddress"
        android:textColor="@color/colorGray"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/colorGray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:text=""
        android:textColor="@color/colorGray"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textColor="@color/colorGray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_phoneNum"
        android:text=""
        android:textColor="@color/colorGray"
        android:imeOptions="actionNext"
        android:singleLine="true"/>




    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:text="@string/registration_btn"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/login_registration"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorGray"/>

    </LinearLayout>
</ScrollView>